--- a/client/index.html
+++ b/client/index.html
@@ -105,7 +105,7 @@
         <v-toolbar color="red" dense fixed clipped-left app>
           <v-toolbar-side-icon @click.stop="drawer = !drawer"></v-toolbar-side-icon>
           <v-toolbar-title class="mr-5 align-center">
-            <span class="title">MiniWP</span>
+            <span class="title">MiniWP - admin</span>
           </v-toolbar-title>
           <v-spacer></v-spacer>
           <v-layout row align-center style="max-width: 400px;">
