--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="google-signin-client_id"
-    content="249855385187-0brfcrlg3ckst7l8stihcq7jrkem0e28.apps.googleusercontent.com">
+  <!-- <meta name="google-signin-client_id"
+    content="249855385187-0brfcrlg3ckst7l8stihcq7jrkem0e28.apps.googleusercontent.com"> -->
+    <meta name="google-signin-client_id"
+    content="249855385187-l665f2vo2c7bcengfgj63d7fde6b5k29.apps.googleusercontent.com">
+    
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify/dist/vuetify.min.css" rel="stylesheet">
   <title>My Mini Wordpress</title>
