--- a/clientbaru/index.html
+++ b/clientbaru/index.html
@@ -23,14 +23,7 @@
 <div id="thepage">
     <div v-show="islogin">
       <!-- NAVIGATION -->
-      <nav class="ui teal inverted labeled icon menu">
-        <p class="header item"><i class="user icon"></i>Helo, {{user}}!</p>
-        <a class="item" @click="checklogin"><i class=" newspaper outline icon" ></i>My Articles</a>
-        <div class="right menu">
-          <a class="item" @click="viewwrite" ><i class="edit outline icon"></i>Write</a>
-          <a class="item" @click="logout" ><i class="sign-out icon"></i>Log Out</a>
-        </div>
-      </nav>
+      <navigationbar v-on:movetopage="navigation"/>
         
       <!-- CONTENT -->
       <div class="ui container">
@@ -86,7 +79,7 @@
             </div>
           </div>
           <div class="ui container left aligned">
-              <input type="file" @change="previewFile" class="ui input"> <button class="ui button mini teal" @click="getGCSurl">Attach Image</button>
+              <input type="file" @change="previewFile" class="ui input" id="createfeaturedimg"> <button class="ui button mini teal">Attach Image</button>
               <button class="ui button teal" @click="savearticle">Save this article</button>
               <button class="ui button teal" @click="savearticle">Save & Post this article</button>
           </div>
@@ -186,6 +179,7 @@
       
 </div>
 <!-- VUE -->
+<script src="javascript/component/navigationbar.js"></script>
 <script src="javascript/component/articlefeed.js"></script>
 <script src="javascript/vue.js"></script>
 <!-- QUILL EDITOR -->
