--- a/clientbaru/index.html
+++ b/clientbaru/index.html
@@ -190,8 +190,8 @@
 </div>
 <!-- VUE -->
 <script>
-import GSignInButton from 'vue-google-signin-button'
-Vue.use(GSignInButton)
+// import GSignInButton from 'vue-google-signin-button'
+// Vue.use(GSignInButton)
 </script>
 
 <script src="javascript/component/articlefeed.js"></script>
