--- a/client/index.html
+++ b/client/index.html
@@ -44,16 +44,6 @@
           >
             <v-container justify-center style="padding-top:100px">
               <v-layout justify-center row>
-                <v-progress-circular
-                  v-if="loading"
-                  :size="70"
-                  :width="5"
-                  color="green"
-                  indeterminate
-                ></v-progress-circular>
-                <img v-if="filtered.length === 0" style="width:40%" src="./assets/noFound.png" alt="noFound">
-              </v-layout>
-              <v-layout justify-center row>
                 <v-flex xs8>
                   <v-btn
                     v-if="isPrimaryFab"
@@ -84,11 +74,23 @@
                   </div>
 
                   <div v-else>
+                    <v-layout justify-center row>
+                      <v-progress-circular
+                        v-if="loading"
+                        :size="70"
+                        :width="5"
+                        color="green"
+                        indeterminate
+                      ></v-progress-circular>
+                    </v-layout>
+                    <v-layout justify-center row>
+                      <img v-if="filtered.length === 0" style="width:70%" src="./assets/noFound.png" alt="noFound">
+                    </v-layout>
                     <div v-if="isGeneral">
-                      <dd-gen-article v-for="(article, i) in filtered" :key="i"></dd-gen-article>
+                      <dd-gen-article v-for="(article, i) in 1" :article="article" :key="i"></dd-gen-article>
                     </div>
                     <div v-else>
-                      <dd-my-article v-for="i in 3" :key="i"></dd-my-article>
+                      <dd-my-article v-for="(article, i) in filtered" :article="article" :key="i"></dd-my-article>
                     </div>
                   </div>
                   
