rapih dikit, next update

--- a/clientbaru/index.html
+++ b/clientbaru/index.html
@@ -69,7 +69,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div><br><br><br><br>
 
         <!-- WRITE NEW ARTICLE // UPDATE ARTICLE -->
         <div class="ui container" v-show="page === 'writearticle' || page === 'updatearticle'">
@@ -110,8 +110,7 @@
                 <button class="ui button fluid huge green" v-if="page === 'updatearticle'">Update</button>
               </div>
             </div>
-          </div>
-              <BR><BR><bR>
+          </div><BR><BR><bR>
         </div>
       </div>
       <!-- FOOTER -->
