--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/solid.css" integrity="sha384-ioUrHig76ITq4aEJ67dHzTvqjsAP/7IzgwE7lgJcg2r7BRNGYSK0LwSmROzYtgzs" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/fontawesome.css"
-        integrity="sha384-sri+NftO+0hcisDKgr287Y/1LVnInHJ1l+XC7+FOabmTTIK0HnE2ID+xxvJ21c5J" crossorigin="anonymous">
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
@@ -20,19 +17,24 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./vueWysiwyg.css" />
+    <meta name="google-signin-scope" content="profile email" />
+    <meta name="google-signin-client_id"
+        content="601450093511-shnmaup8g843a284a2inr80r858odfm7.apps.googleusercontent.com" />
+
     <!-- <script src="./js/main.js"></script> -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <title>Document</title>
 </head>
 
 <body>
-    <main id='blog-post'>
+    <div id="blog-post">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
             <a class="navbar-brand" href="#">Mini-Wp</a>
-
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,55 +42,64 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" @click.prevent="mainPage='home'">Home <span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">My Profile</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Category
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">category-1 </a>
-                            <a class="dropdown-item" href="#">category-2</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">category-a</a>
-                        </div>
+                        <a class="nav-link" @click.prevent="mainPage='home'">My Profile</a>
                     </li>
                 </ul>
                 <div class="form-inline">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
                 </div>
                 <div class="form-inline" v-if="!token">
-                    <button class="btn bg-info btn-sm m-3 p-2">login</button>                                       
+                    <button class="btn bg-info btn-sm m-3 p-2" @click=" mainPage = 'login'">
+                        login
+                    </button>
                 </div>
                 <div class="form-inline" v-if="!token">
-                    <button class="btn bg-info btn-sm m-3 p-2">register</button> 
+                    <button class="btn bg-info btn-sm m-3 p-2 " @click=" mainPage = 'register'">
+                        register
+                    </button>
                 </div>
                 <div class="form-inline" v-if="token">
-                    <button class="btn bg-info btn-sm m-3 p-2">logout</button> 
+                    <button class="btn bg-info btn-sm m-3 p-2" @click="logout">
+                        logout
+                    </button>
+                </div>
+                <div class="form-inline" v-if="!token">
+                    <div class="g-signin2" data-onsuccess="onGoogleSignIn" data-theme="dark"></div>
                 </div>
             </div>
         </nav>
-
-        <div class="container bg-primary text-center">
-            <div class="row m-3">
-                <div class="col-sm ">
-                    <div class="accordion" id="accordionExample">
-                        <Posted class="card" v-for='(article, index) in articles' :article='article' :index='index'
-                            :key="index">
-                            <button class="btn col-sm bg-success m-3 p-2 border">
-                                add a new post
-                            </button>
-                    </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-10 p-2 " v-if="(mainPage === 'home')">
+                    <Posttile @edit="setEdit" @read="setRead" @remove="setRemove" v-for="article in articles"
+                        :article="article" :key="article._id"></Posttile>
                 </div>
+                <div class="col-md-2 p-2" v-if="(mainPage === 'home')">
+                    <div class="p-2" v-if="token">
+                        <button type="button" class="btn btn-primary" @click="setAdd">add article</button>                        
+                    </div>                    
+                </div>
+                <Editor @patch="addArticle" :article="newArticle" v-if="(mainPage==='create')"></Editor>
+                <Editor @patch="patchArticle" :article="editArticle" v-if="(mainPage==='edit')"></Editor>
+                <Reader :article="readArticle" v-if="(mainPage==='read')"></Reader>
+                <Login @login="regularLogin" v-if="(mainPage === 'login')"></Login>
+                <Register @register="regularRegister" v-if="(mainPage === 'register')"></Register>
             </div>
-    </main>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        </div>
+    </div>
+    <script src="./js/vueWysiwyg.js"></script>
+    <script src="./js/readArticle.js"></script>
+    <script src="./js/editArticle.js"></script>
+    <script src="./js/login.js"></script>
+    <script src="./js/register.js"></script>
+    <script src="./js/postTile.js"></script>
     <script src="./js/main.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
 
 </html>
